Local storage added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <script src="arrays/searching.js"></script>
+    <!-- Scripts -->
+    <!--<script src="events/events1.js"></script>-->
 </head>
 <body>
-    
+    <h1>Document Object Model (DOM)</h1>
+    <h2 id="header">Javascript</h2>
+    <br>
+    <form id="">
+        <input type="text" name="name" id="name">    
+    </form>
+  <p>
+    <button id="start">Start it</button>
+    <button id="stop">Stop it</button>
+    <button id="button">Press me</button> 
+  </p>
+    <section id="mySection">
+        <h3>Texts list divs</h3>
+    </section>
+    <div id="myBox">
+        I'm a box!
+    </div>
+
+    <div class="yellow">
+       Div #1 
+    </div>
+    <div class="red">
+        Div #2
+     </div>
+     <div class="red">
+        Div #3 
+     </div>
+     <br><br>
+     <h2>Add your movie!</h2>
+     <form action="" id="movies-form">
+        <input type="text" name="" id="add_movie">
+        <button type="submit">Save</button>
+     </form>
+     <h2>Movies</h2>
+     <div class="movies">
+        <ul id="movies-list">
+
+        </ul>
+     </div>
+     <h2>Delete your movie!</h2>
+     <form action="" id="del-movies-form">
+        <input type="text" name="" id="delete_movie">
+        <button type="submit">Delete</button>
+     </form>
+     <!-- Scripts -->
+    <script src="local_storage/local_storage2.js"></script>
 </body>
 </html>
